New folder/open-interpreter/codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__guardian_approved_exec_is_hidden_from_history.snap
---
source: tui/src/chatwidget/tests/guardian.rs
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---





✔ Auto-reviewer approved the agent to run rm -f /tmp/guardian-approved.sqlite
  this time


› Ask Codex to do anything

  GPT-5.6-Sol default · /tmp/project
